# rusta

./: Cargo.toml
src/: db.rs  main.rs
