[package]
name = "actix_postgres_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1.0"
tokio-postgres = { version = "0.7", features = ["rustls"] }
deadpool-postgres = { version = "0.9", features = ["rustls"] }
dotenv = "0.15"
rustls = "0.20"
tokio = { version = "1", features = ["full"] }
webpki-roots = "0.22"
