[package]
name = "actix_postgres_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix Web framework
actix-web = "4"
actix-rt = "2"

# Tokio for async runtime
tokio = { version = "1", features = ["full"] }

# Deadpool for connection pooling, with Postgres
deadpool-postgres = "0.9"

# Tokio Postgres for asynchronous Postgres support
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }

# TLS dependencies for secure database connections
tokio-postgres-rustls = "0.5"
rustls = "0.20"
webpki-roots = "0.22.6"

rustls-pemfile = "1.0"
webpki = "0.22"


# serde for serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# dotenv for managing environment variables
dotenv = "0.15"

jsonwebtoken = "8"

# log and env_logger for logging
log = "0.4"
env_logger = "0.9"

# Optional dependencies (for future development or logging improvements)
# tracing = "0.1"
# tracing-actix-web = "0.5"
